; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_pagelist.c_nfs_pgio_header_alloc.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_pagelist.c_nfs_pgio_header_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfs_pgio_header = type { %struct.nfs_rw_ops*, i32 }
%struct.nfs_rw_ops = type { %struct.nfs_pgio_header* (...)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.nfs_pgio_header* @nfs_pgio_header_alloc(%struct.nfs_rw_ops* %0) #0 {
  %2 = alloca %struct.nfs_rw_ops*, align 8
  %3 = alloca %struct.nfs_pgio_header*, align 8
  store %struct.nfs_rw_ops* %0, %struct.nfs_rw_ops** %2, align 8
  %4 = load %struct.nfs_rw_ops*, %struct.nfs_rw_ops** %2, align 8
  %5 = getelementptr inbounds %struct.nfs_rw_ops, %struct.nfs_rw_ops* %4, i32 0, i32 0
  %6 = load %struct.nfs_pgio_header* (...)*, %struct.nfs_pgio_header* (...)** %5, align 8
  %7 = call %struct.nfs_pgio_header* (...) %6()
  store %struct.nfs_pgio_header* %7, %struct.nfs_pgio_header** %3, align 8
  %8 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %3, align 8
  %9 = icmp ne %struct.nfs_pgio_header* %8, null
  br i1 %9, label %10, label %17

10:                                               ; preds = %1
  %11 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %3, align 8
  %12 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %11, i32 0, i32 1
  %13 = call i32 @INIT_LIST_HEAD(i32* %12)
  %14 = load %struct.nfs_rw_ops*, %struct.nfs_rw_ops** %2, align 8
  %15 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %3, align 8
  %16 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %15, i32 0, i32 0
  store %struct.nfs_rw_ops* %14, %struct.nfs_rw_ops** %16, align 8
  br label %17

17:                                               ; preds = %10, %1
  %18 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %3, align 8
  ret %struct.nfs_pgio_header* %18
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
